# rulechef

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  PUBLIC_ROADMAP.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  docs.yml  rights-check.yml
api/: config.py  deps.py  main.py  schemas.py  security.py  state.py  tasks.py
api/coordinator/: index.html
api/core/: index.html
api/evaluation/: index.html
api/executor/: index.html
api/ranking/: index.html
api/routes/: data.py  extraction.py  learning.py  project.py  rules.py
api/rulechef/: index.html
api/splitting/: index.html
api/training-logger/: index.html
benchmarks/: INSPECTING_RULES.md  ablation_extract.py  baseline_llm_fewshot.py  benchmark.py  benchmark_aegis.py  benchmark_banking77.py  benchmark_compare.py  benchmark_delegation_curve.py  benchmark_extract.py  benchmark_germanler.py  benchmark_observation_banking77.py  benchmark_pipeline.py  benchmark_when2call.py  chef_setup.py  create_md_report_rules.py  data.py  demo_hitl_feedback.py  eval_tab_official.py  index.html  io.py  make_paper_figures.py  plot_metrics.py  reporting.py  results_banking77.json  rule_report.py  savings_report.py  schemas.py
benchmarks/results/: results_ablation_extract_tab.json  results_aegis_kimi_v5_ensemble.json  results_banking77_baselines.json  results_banking77_new.json  results_compare_dbpedia.json  results_delegation_dbpedia.json  results_extract_tab.ckpt_rulechef.json  results_extract_tab.json  results_gliner2_schema_tab.json  results_hitl_feedback.json  results_observation_banking77.json  results_tab_official.json  results_when2call_v2.json  sample_traffic_banking77.jsonl
demo/: 1_Add_Data.py  streamlit_demo.py  utils.py
demo/pages/: 2_Learn_Rules.py  3_Extract.py  ⛁_Add_Data.py  🎓_Learn_Rules.py  🔍︎_Extract.py
docs/: benchmarks.md  example-savings-report.html  index.md
docs/api/: coordinator.md  core.md  evaluation.md  executor.md  ranking.md  rulechef.md  splitting.md  training-logger.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: advanced.md  app.md  coordinators.md  evaluation.md  learning.md  task-types.md
docs/stylesheets/: extra.css
examples/: evaluation_offline.py  gliner_observation.py  incremental_patch.py  ner_pydantic.py  quickstart.py
examples/data/: demo_ner_bulk.jsonl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/lib/: entities.ts
frontend/src/pages/: DataPage.tsx  (+2 more)
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/advanced/: index.html
guide/app/: index.html
guide/coordinators/: index.html
guide/evaluation/: index.html
guide/learning/: index.html
guide/task-types/: index.html
ner_datasets/: __init__.py  conversion.py  dataset.py  preprocessing.py  preprocessing_ler.py  sampling.py  utils.py
notebooks/: tutorial.ipynb
rulechef/: __init__.py  buffer.py  cli.py  coordinator.py  core.py  engine.py  evaluation.py  executor.py  gliner_wrapper.py  learner.py  llm_calls.py  matching.py  observation.py  openai_wrapper.py  pipeline.py  prompts.py  ranking.py  report.py  savings.py  splitting.py  storage.py  training_logger.py
rulechef/examples/: agentic_showcase.py  ner_demo.py  ner_pydantic.py  ner_typed.py  quickstart.py  transformation_typed.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_buffer.py  test_conflict_resolution.py  test_coordinator.py  test_core.py  test_engine_observation.py  test_evaluation.py  test_executor.py  test_failure_clustering.py  test_gliner_observer.py  test_incremental_live.py  test_llm_calls.py  test_matching.py  test_openai_wrapper.py  test_patch_budget.py  test_prompts.py  test_ranking.py  test_reports.py  test_rule_loading.py  test_splitting.py  test_training_logger.py
(+51 files in other folders)
