[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulechef"
version = "0.1.0"
description = "Learn rule-based models from examples and LLM interactions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "RuleChef Contributors"},
]
keywords = ["rule-learning", "llm", "extraction", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
agentic = [
    "pydantic-ai>=0.0.1",
]
spacy = [
    "spacy>=3.0.0",
]
grex = [
    "grex>=1.0",
]
benchmark = [
    "datasets>=2.0.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "openai>=1.0.0",
    "pydantic-ai>=0.0.1",
    "spacy>=3.0.0",
    "grex>=1.0",
]

[project.urls]
Homepage = "https://github.com/KRLabsOrg/rulechef"
Documentation = "https://krlabsorg.github.io/rulechef"
Repository = "https://github.com/KRLabsOrg/rulechef"

[project.scripts]
rulechef = "rulechef.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rulechef"]
