[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulechef"
version = "0.1.3"
description = "Learn rule-based models from examples and LLM interactions"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
authors = [
    {name = "Adam Kovacs", email = "kovacs@krlabs.eu"},
]
keywords = ["rule-learning", "llm", "extraction", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
agentic = [
    "pydantic-ai>=0.0.1",
]
spacy = [
    "spacy>=3.0.0",
]
gliner = [
    "gliner>=1.0",
]
gliner2 = [
    "gliner2>=0.1",
]
grex = [
    "grex>=1.0",
]
benchmark = [
    "datasets>=2.0.0",
]
notebooks = [
    "rich>=13.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
all = [
    "openai>=1.0.0",
    "pydantic-ai>=0.0.1",
    "spacy>=3.0.0",
    "grex>=1.0",
]

[project.urls]
Homepage = "https://github.com/KRLabsOrg/rulechef"
Documentation = "https://krlabsorg.github.io/rulechef"
Repository = "https://github.com/KRLabsOrg/rulechef"

[project.scripts]
rulechef = "rulechef.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rulechef"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108", "SIM105", "B905"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = ["union-attr", "attr-defined", "arg-type", "assignment", "misc", "operator", "var-annotated"]

[tool.pytest.ini_options]
markers = ["integration: marks tests that require a live API"]
